Jobb oldal, újra

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,5 @@
+file.reference.Kviz-master-public_html=public_html
 file.reference.Kviz-public_html=public_html
 file.reference.Kviz-test=test
 files.encoding=UTF-8
-site.root.folder=${file.reference.Kviz-public_html}
-test.folder=${file.reference.Kviz-test}
+site.root.folder=${file.reference.Kviz-master-public_html}
